+ Readme V1.0, +server.properties ENV, default JVM Args